--- a/lessons/lesson2/data/jupyter_tutorial.ipynb
+++ b/lessons/lesson2/data/jupyter_tutorial.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupyter Notebooks consist of **cells** that contain either text or Python code. This is a MarkDown cell for text. It supports basic text formatting with MarkDown that renders as a nice text block when run."
+    "Jupyter Notebooks consist of **cells** that contain either text or Python code. \n",
+    "\n",
+    "This is a `Markdown` cell. It supports basic text formatting with Markdown and is mostly used to descibe the code that preceeds or follows it."
    ]
   },
   {
@@ -28,8 +30,8 @@
     }
    ],
    "source": [
-    "# This is a Python code block. \n",
-    "# Any outputs of your code will be shown below.\n",
+    "# This is a Python cell.\n",
+    "# Any outputs of code written here will appear directly below.\n",
     "print('Hello World')"
    ]
   },
@@ -38,7 +40,7 @@
    "metadata": {},
    "source": [
     "## Running cells\n",
-    "To run a cell, you click the cell, then click the `>| Run` button above. Try it on the block below."
+    "To run a cell, you click the cell to select it, and then click the `>| Run` button above. Try it on the block below."
    ]
   },
   {
@@ -47,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"You can run me by clicking Run\")"
+    "print(\"You can run me by selecting me and clicking Run\")"
    ]
   },
   {
@@ -55,13 +57,72 @@
    "metadata": {},
    "source": [
     "## Making new cells\n",
-    "You can make a new cell by clicking the `+` button above. You choose what type of cell it is with the dropdown menu (choose `code` for a code block, or `Markdown` for a text block). Try adding a text block below:"
+    "You can make a new cell by clicking the `+` \"insert cell below\" button in the toolbar above. Choose between `code` and `markdown` cells from the dropdown menu in the toolbar. The default is `code`.\n",
+    "\n",
+    "Try adding a Markdown text block below. Write something surrounded by asterisks (e.g. `**wow**`) and then click `>| Run` to render the cell."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Cool plots\n",
+    "Jupyter notebooks also let you display cool plots inline. Don't worry about the code, just try running the following code block."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sns.set(style=\"darkgrid\")\n",
+    "iris = sns.load_dataset(\"iris\")\n",
+    "\n",
+    "# Subset the iris dataset by species\n",
+    "setosa = iris.query(\"species == 'setosa'\")\n",
+    "virginica = iris.query(\"species == 'virginica'\")\n",
+    "\n",
+    "# Set up the figure\n",
+    "f, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.set_aspect(\"equal\")\n",
+    "\n",
+    "# Draw the two density plots\n",
+    "ax = sns.kdeplot(setosa.sepal_width, setosa.sepal_length,\n",
+    "                 cmap=\"Reds\", shade=True, shade_lowest=False)\n",
+    "ax = sns.kdeplot(virginica.sepal_width, virginica.sepal_length,\n",
+    "                 cmap=\"Blues\", shade=True, shade_lowest=False)\n",
+    "\n",
+    "# Add labels to the plot\n",
+    "red = sns.color_palette(\"Reds\")[-2]\n",
+    "blue = sns.color_palette(\"Blues\")[-2]\n",
+    "ax.text(2.5, 8.2, \"virginica\", size=16, color=blue)\n",
+    "ax.text(3.8, 4.5, \"setosa\", size=16, color=red)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Editing blocks\n",
+    "You can edit any block by double clicking it to enter edit mode. Double click me to edit!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other options\n",
+    "Note some other buttons on the toolbar above:\n",
+    "- save: Saves the notebook. Your notebook will also autosave every few minutes.\n",
+    "- cut, copy, and paste: Duplicate or move cells.\n",
+    "- stop, refresh, fast-forward: These stop, restart and re-run the **kernel**.\n",
+    "\n",
+    "Underlying the Jupyter notebook is an **IPython** kernel which is interpreting the code and rendering the pretty graphics. Sometimes this kernel gets bogged down or crashes and needs to be restarted. Try clicking the fast-forward button (restart kernel and re-run notebook). This will clear all outputs and rerun the notebook from the top down."
+   ]
   }
  ],
  "metadata": {
