Fix typos in lesson2

--- a/lessons/lesson2/data/lesson2.ipynb
+++ b/lessons/lesson2/data/lesson2.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Lesson 2\n",
+    "If you are viewing this on GitHub, you can head to mybinder.org to interact with it [here](https://mybinder.org/v2/gh/cjtu/sci_coding/master?filepath=lessons%2Flesson2%2Fdata%2Flesson2.ipynb).\n",
+    "\n",
     "In this lesson we will interactively practice writing Python code. Below are the skeletons of various **functions** involving strings, booleans, and control flow. \n",
     "\n",
     "We will cover how to write a **function** in the next lesson. For now, you are tasked with reading the description of each function and changing the indicated line(s) to return the correct output.\n",
@@ -46,7 +48,7 @@
    "metadata": {},
    "source": [
     "## Doctest\n",
-    "To test your work, we will use the `doctest` module. Doctest automatically runs all of the examples in the docstring and lets you know if your code fails to produces the correct output (if there is no output, it means your code passed the tests!). Make sure to import the module by running the `import doctest` block below. Then when you run each cell, the `doctest.run_docstring_examples()` function will check your code."
+    "To test your work, we will use the `doctest` module. Doctest automatically runs all of the examples in the docstring and lets you know if your code fails to produces the correct output (if there is no output, it means your code passed the tests!). Make sure to import the module by running the `import doctest` block below. Once you have fixed each function, you can run its cell to check that the examples produce the correct outputs."
    ]
   },
   {
@@ -119,7 +121,7 @@
     "    return output\n",
     "\n",
     "# Run doctest\n",
-    "doctest.run_docstring_examples(get_last_char, globals())"
+    "doctest.run_docstring_examples(get_first_char, globals())"
    ]
   },
   {
@@ -142,7 +144,7 @@
     "    return output\n",
     "\n",
     "# Run doctest\n",
-    "doctest.run_docstring_examples(get_first_char, globals())"
+    "doctest.run_docstring_examples(get_last_char, globals())"
    ]
   },
   {
@@ -165,7 +167,7 @@
     "    return output\n",
     "\n",
     "# Run doctest\n",
-    "doctest.run_docstring_examples(get_first_char, globals())"
+    "doctest.run_docstring_examples(get_third_last_char, globals())"
    ]
   },
   {
@@ -273,7 +275,7 @@
     "    return output\n",
     "\n",
     "# Run doctest\n",
-    "doctest.run_docstring_examples(slice_last_five, globals())"
+    "doctest.run_docstring_examples(slice_third_to_second_last, globals())"
    ]
   },
   {
@@ -286,7 +288,7 @@
     "### If statements\n",
     "If statements allow you to change the execution of your code based on whether or not a condition is met. They consist of a **condition** and a **clause** (if condition is met, then do the stuff in the clause).\n",
     "\n",
-    "If statements will often use **comaprison operators** like `==` (is equal to) to determine whether the followign code is run.\n",
+    "If statements will often use **comaprison operators** like `==` (is equal to) to determine whether the following code is run.\n",
     "\n",
     "The if statement follows the following form:\n",
     "```Python\n",
@@ -421,7 +423,7 @@
     "- ` <= `: Less than or equal to\n",
     "- ` >= `: Greater than or equal to \n",
     "\n",
-    "**Beware!** The equal sign is a way to assign a value to a variable (`mystring = \"Hello World\"`). The double equal sign is a comparison operator used to check if two objects are equal (`\"Hello\" == \"World\"` would return `False`).\n"
+    "**Beware!** The equal sign assigns a value to a variable (`mystring = \"Hello World\"`). The double equal sign is a comparison operator used to check if two objects are equal (`\"Hello\" == \"World\"` would return `False`).\n"
    ]
   },
   {
@@ -431,7 +433,7 @@
    "outputs": [],
    "source": [
     "def is_big(input_int):\n",
-    "    \"\"\"Return True if input_int is larger than 1000.\n",
+    "    \"\"\"Return True if input_int is 1000 or larger.\n",
     "    \n",
     "    >>> is_big(1)\n",
     "    False\n",
@@ -528,7 +530,7 @@
     "## If doctests_pass(): return \"You made it!\"\n",
     "Great job finishing the intro to strings, booleans, and control flow.\n",
     "\n",
-    "You completed a lot of functions today, but next lesson we will learn to write our own from scratch. We will also work with two super useful data structures, the `list` and the `dictionary`.\n",
+    "You completed a lot of functions today, but next lesson we will learn to write our own functions from scratch. We will also work with two super useful data structures, the `list` and the `dictionary`.\n",
     "\n",
     "The pre-class homework for next week is Codecademy's [Learn-Python](https://www.codecademy.com/learn/learn-python) modules 4 and 5."
    ]
