--- a/lessons/lesson2/data/jupyter_tutorial.ipynb
+++ b/lessons/lesson2/data/jupyter_tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# This is a Jupyter Notebook\n",
     "\n",
-    "If you are unable to fork this repo and open this in a local jupyter notebook, you can also view and interact with it using mybinder.org [here](https://mybinder.org/v2/gh/cjtu/sci_coding/master?filepath=lessons%2Flesson2%2Fdata%2Fjupyter_tutorial.ipynb).\n",
+    "If you are viewing this on GitHub, you can head to mybinder.org to interact with it [here](https://mybinder.org/v2/gh/cjtu/sci_coding/master?filepath=lessons%2Flesson2%2Fdata%2Fjupyter_tutorial.ipynb).\n",
     "\n",
     "Jupyter Notebooks consist of **cells** that contain either text or Python code. \n",
     "\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "## Running cells\n",
-    "To run a cell, you click the cell to select it, and then click the `>| Run` button above. \n",
+    "To run a cell, click the cell to select it, and then click the `>| Run` button above. \n",
     "\n",
     "Try running the block below."
    ]
@@ -137,7 +137,7 @@
     "## Jupyter in action\n",
     "The Jupyter notebook allows for complete reproducibility of scientific analyses. Most computational science involves writing code that imports and analyzes data, and then plots some results. Once you have that code working, you can copy and paste it into a Jupyter notebook and explain the important parts of your analysis with markdown cells.\n",
     "\n",
-    "For a great example, see this Jupyter tutorial on how to find gravitational waves (go to link and then run the notebook with Azure or mybinder): https://www.gw-openscience.org/tutorials/ "
+    "For a great example, see this Jupyter tutorial from LIGO on how to find gravitational waves (go to link and then run the notebook with Azure or mybinder): https://www.gw-openscience.org/tutorials/ "
    ]
   }
  ],
