--- a/lessons/lesson3/data/Lists and Tuples.ipynb
+++ b/lessons/lesson3/data/Lists and Tuples.ipynb
@@ -316,7 +316,7 @@
    "metadata": {},
    "source": [
     "## List methods\n",
-    "Many data structures in Python have built-in **methods** that can perform an action on an instance of that data structure. We have already used the `.append()` and `.pop()` methods of the list above. To see what methods are available, we can always use `help()`."
+    "Let's explore some useful **methods** of the **list**. We have already used the `.append()` and `.pop()` methods above. To see what methods are available, we can always use `help()`."
    ]
   },
   {
