Fix less3 part 3

--- a/lessons/lesson3/data/3_Sets_and_Dictionaries.ipynb
+++ b/lessons/lesson3/data/3_Sets_and_Dictionaries.ipynb
@@ -340,14 +340,14 @@
    "metadata": {},
    "source": [
     "## Dictionaries\n",
-    "The dictionary is *unordered* like the set, but stores **key-value** pairs of data. This is a very flexible and generally efficient data structure to use for names data.\n",
+    "The dictionary is *unordered* like the set, and so it cannot be indexed. What dictionaries do instead is store **key-value** pairs of data. This is a very flexible and extremely efficient data structure to use for large amounts of data that are updated frequently.\n",
     "\n",
     "Note: dictionaries are also defined with `{}` curly braces, but take a **key** and a **value** separated by a colon `:`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -356,15 +356,15 @@
        "dict"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Dict of {shoe size:number sold} on this day\n",
-    "shoe_dict = {6:2, 7:5, 8:2, 9:2, 10:1, 13:1}\n",
-    "type(shoe_dict)"
+    "# Postition of letters in the alphabet\n",
+    "alpha_dict = {'a':1, 'b':2, 'c':3, 'd':4, 'e':7}\n",
+    "type(alpha_dict)"
    ]
   },
   {
@@ -376,27 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shoe_dict[6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -405,13 +385,103 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shoe_dict[13]"
+    "alpha_dict['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_dict['d']"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Dictionaries are mutable so we can adjust a value for a given key."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_dict['e'] = 5\n",
+    "alpha_dict['e']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `dict` makes no assumption about the types of its keys and values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 8, 9, 6, 7, 7, 9, 7, 8]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dict of day of the week to shoe sizes sold\n",
+    "shoe_dict = {'Monday' : [7, 8, 9, 6, 7, 7, 9, 7, 8],\n",
+    "             'Tuesday' : [7, 6, 7, 8, 9, 6, 7, 7, 9], \n",
+    "             'Wednesday' : [6, 7, 7, 9],\n",
+    "             'Thursday' : [7, 7, 6, 7, 9, 8, 6, 7, 13],\n",
+    "             'Friday' : [13, 7, 6, 7, 8, 9, 6, 7, 7],\n",
+    "             'Saturday' : [7, 7, 9, 7, 8, 10],\n",
+    "             'Sunday': [7, 7, 9, 7, 8, 10]}\n",
+    "shoe_dict['Thursday']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary Practice"
    ]
   },
   {
@@ -419,7 +489,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# return True if all of the same shoe shoe sizes and number of each were sold on saturday and sunday\n",
+    "# in the same order\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# return True if all of the same shoe sizes (regardless of number) were sold on monday and tuesday\n",
+    "# hint: compare two sets\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# return True if all of the same shoe sizes and number of each were sold on thursday and friday\n",
+    "# regarless of the order they were sold in\n",
+    "# hint: compare two sorted lists\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
