Fix typo in lesson 3 part 3

--- a/lessons/lesson3/data/3_Sets_and_Dictionaries.ipynb
+++ b/lessons/lesson3/data/3_Sets_and_Dictionaries.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 5 2 2 1 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A shoe stores sells shoes of the following sizes on a certain day\n",
     "shoe_sizes = [7, 8, 9, 6, 7, 7, 9, 7, 8, 10, 13, 7, 6]\n",
@@ -46,20 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{5, 6, 7, 8, 9, 10, 13, 14}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "shoe_sizes = [7, 8, 9, 6, 7, 7, 9, 7, 8, 10, 13, 7, 6, 7, 8, 9, 6, 7, \n",
     "              7, 9, 7, 8, 10, 13, 7, 6, 7, 8, 9, 6, 7, 7, 9, 7, 14, 5,\n",
@@ -79,178 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class set in module builtins:\n",
-      "\n",
-      "class set(object)\n",
-      " |  set() -> new empty set object\n",
-      " |  set(iterable) -> new set object\n",
-      " |  \n",
-      " |  Build an unordered collection of unique elements.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __and__(self, value, /)\n",
-      " |      Return self&value.\n",
-      " |  \n",
-      " |  __contains__(...)\n",
-      " |      x.__contains__(y) <==> y in x.\n",
-      " |  \n",
-      " |  __eq__(self, value, /)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __ge__(self, value, /)\n",
-      " |      Return self>=value.\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __gt__(self, value, /)\n",
-      " |      Return self>value.\n",
-      " |  \n",
-      " |  __iand__(self, value, /)\n",
-      " |      Return self&=value.\n",
-      " |  \n",
-      " |  __init__(self, /, *args, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __ior__(self, value, /)\n",
-      " |      Return self|=value.\n",
-      " |  \n",
-      " |  __isub__(self, value, /)\n",
-      " |      Return self-=value.\n",
-      " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |  \n",
-      " |  __ixor__(self, value, /)\n",
-      " |      Return self^=value.\n",
-      " |  \n",
-      " |  __le__(self, value, /)\n",
-      " |      Return self<=value.\n",
-      " |  \n",
-      " |  __len__(self, /)\n",
-      " |      Return len(self).\n",
-      " |  \n",
-      " |  __lt__(self, value, /)\n",
-      " |      Return self<value.\n",
-      " |  \n",
-      " |  __ne__(self, value, /)\n",
-      " |      Return self!=value.\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  __or__(self, value, /)\n",
-      " |      Return self|value.\n",
-      " |  \n",
-      " |  __rand__(self, value, /)\n",
-      " |      Return value&self.\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling.\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __ror__(self, value, /)\n",
-      " |      Return value|self.\n",
-      " |  \n",
-      " |  __rsub__(self, value, /)\n",
-      " |      Return value-self.\n",
-      " |  \n",
-      " |  __rxor__(self, value, /)\n",
-      " |      Return value^self.\n",
-      " |  \n",
-      " |  __sizeof__(...)\n",
-      " |      S.__sizeof__() -> size of S in memory, in bytes\n",
-      " |  \n",
-      " |  __sub__(self, value, /)\n",
-      " |      Return self-value.\n",
-      " |  \n",
-      " |  __xor__(self, value, /)\n",
-      " |      Return self^value.\n",
-      " |  \n",
-      " |  add(...)\n",
-      " |      Add an element to a set.\n",
-      " |      \n",
-      " |      This has no effect if the element is already present.\n",
-      " |  \n",
-      " |  clear(...)\n",
-      " |      Remove all elements from this set.\n",
-      " |  \n",
-      " |  copy(...)\n",
-      " |      Return a shallow copy of a set.\n",
-      " |  \n",
-      " |  difference(...)\n",
-      " |      Return the difference of two or more sets as a new set.\n",
-      " |      \n",
-      " |      (i.e. all elements that are in this set but not the others.)\n",
-      " |  \n",
-      " |  difference_update(...)\n",
-      " |      Remove all elements of another set from this set.\n",
-      " |  \n",
-      " |  discard(...)\n",
-      " |      Remove an element from a set if it is a member.\n",
-      " |      \n",
-      " |      If the element is not a member, do nothing.\n",
-      " |  \n",
-      " |  intersection(...)\n",
-      " |      Return the intersection of two sets as a new set.\n",
-      " |      \n",
-      " |      (i.e. all elements that are in both sets.)\n",
-      " |  \n",
-      " |  intersection_update(...)\n",
-      " |      Update a set with the intersection of itself and another.\n",
-      " |  \n",
-      " |  isdisjoint(...)\n",
-      " |      Return True if two sets have a null intersection.\n",
-      " |  \n",
-      " |  issubset(...)\n",
-      " |      Report whether another set contains this set.\n",
-      " |  \n",
-      " |  issuperset(...)\n",
-      " |      Report whether this set contains another set.\n",
-      " |  \n",
-      " |  pop(...)\n",
-      " |      Remove and return an arbitrary set element.\n",
-      " |      Raises KeyError if the set is empty.\n",
-      " |  \n",
-      " |  remove(...)\n",
-      " |      Remove an element from a set; it must be a member.\n",
-      " |      \n",
-      " |      If the element is not a member, raise a KeyError.\n",
-      " |  \n",
-      " |  symmetric_difference(...)\n",
-      " |      Return the symmetric difference of two sets as a new set.\n",
-      " |      \n",
-      " |      (i.e. all elements that are in exactly one of the sets.)\n",
-      " |  \n",
-      " |  symmetric_difference_update(...)\n",
-      " |      Update a set with the symmetric difference of itself and another.\n",
-      " |  \n",
-      " |  union(...)\n",
-      " |      Return the union of sets as a new set.\n",
-      " |      \n",
-      " |      (i.e. all elements that are in either set.)\n",
-      " |  \n",
-      " |  update(...)\n",
-      " |      Update a set with the union of itself and others.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  __hash__ = None\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(set)"
    ]
@@ -264,21 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'set' object does not support indexing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-b671c0a790c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshoe_set\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shoe_set[0]"
    ]
@@ -294,20 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "monday_shoe_set = {5, 6, 7, 8, 9, 10, 13, 14}\n",
     "tuesday_shoe_set = {6, 8, 10, 11, 12, 14}\n",
@@ -316,23 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sizes sold both days: {5, 6, 7, 8, 9, 10, 11, 12, 13, 14} \n",
-      "Sizes sold only on one day: {9, 13, 5, 7}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "both_days = monday_shoe_set.union(tuesday_shoe_set)\n",
-    "one_day = monday_shoe_set.difference(tuesday_shoe_set)\n",
-    "print(\"Sizes sold both days:\", both_days,\n",
-    "      \"\\nSizes sold only on one day:\", one_day)"
+    "total_shoe_sizes = monday_shoe_set.union(tuesday_shoe_set)\n",
+    "monday_unique = monday_shoe_set.difference(tuesday_shoe_set)\n",
+    "print(\"Total sizes sold:\", total_shoe_sizes,\n",
+    "      \"\\nSizes sold only on Monday:\", one_day)"
    ]
   },
   {
@@ -347,20 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Postition of letters in the alphabet\n",
     "alpha_dict = {'a':1, 'b':2, 'c':3, 'd':4, 'e':7}\n",
@@ -376,40 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha_dict['a']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha_dict['d']"
    ]
@@ -423,20 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha_dict['e'] = 5\n",
     "alpha_dict['e']"
@@ -446,25 +182,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `dict` makes no assumption about the types of its keys and values."
+    "The `dict` makes no assumption about the types of its keys and values. Only that the **keys** must be *unique*. If you try to add another element to a key in a dictionary, it will be overwritten."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary Practice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7, 8, 9, 6, 7, 7, 9, 7, 8]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dict of day of the week to shoe sizes sold\n",
     "shoe_dict = {'Monday' : [7, 8, 9, 6, 7, 7, 9, 7, 8],\n",
@@ -475,13 +207,6 @@
     "             'Saturday' : [7, 7, 9, 7, 8, 10],\n",
     "             'Sunday': [7, 7, 9, 7, 8, 10]}\n",
     "shoe_dict['Thursday']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dictionary Practice"
    ]
   },
   {
