Add conda installs to ipynb for mybinder

--- a/lessons/lesson4/data/1_Modules.ipynb
+++ b/lessons/lesson4/data/1_Modules.ipynb
@@ -24,6 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#===========================================================\n",
+    "# Run this cell ONLY if you are viewing this on mybinder.org\n",
+    "import sys\n",
+    "!conda install --yes --prefix {sys.prefix} numpy matplotlib\n",
+    "#==========================================================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot # Imports the pyplot module within the matplotlib package"
    ]
   },
