--- a/lessons/lesson4/data/2_Loops.ipynb
+++ b/lessons/lesson4/data/2_Loops.ipynb
@@ -48,6 +48,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell ONLY if you are viewing this on mybinder.org, otherwise skip it\n",
+    "import sys\n",
+    "!conda install --yes --prefix {sys.prefix} numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np"
    ]
   },
