--- a/lessons/lesson4/data/2_Loops.ipynb
+++ b/lessons/lesson4/data/2_Loops.ipynb
@@ -48,9 +48,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell ONLY if you are viewing this on mybinder.org, otherwise skip it\n",
+    "#===========================================================\n",
+    "# Run this cell ONLY if you are viewing this on mybinder.org\n",
     "import sys\n",
-    "!conda install --yes --prefix {sys.prefix} numpy"
+    "!conda install --yes --prefix {sys.prefix} numpy\n",
+    "#==========================================================="
    ]
   },
   {
