Fix typo, add homework

--- a/lessons/lesson4/data/1_Modules.ipynb
+++ b/lessons/lesson4/data/1_Modules.ipynb
@@ -162,7 +162,7 @@
    "source": [
     "Whoops. When we `import *`, Python cannot tell the difference between the `plot()` function imported from `matplotlib` the `plot()` function imported from `coolplotlib`. If functions or variables have duplicate names when you `import *`, Python will simply overwrite them without telling you. This can be a sneaky way to introduce bugs into your code. It is also why we import at the top of the code, to avoid accidentally overwriting our own functions and variables part-way through our work.\n",
     "\n",
-    "To avoid this problem, it is convention to use the `import as` method so that we always specify the module an external fucntion comes from (using `module.function()`). This convention also makes it clear where your functions are coming from when future you or collaborators want to understand what your code is doing."
+    "To avoid this problem, it is convention to use the `import as` method so that we always specify the module an external function comes from (using `module.function()`). This convention also makes it clear where your functions are coming from when future you or collaborators want to understand what your code is doing."
    ]
   },
   {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Woah. That's a really long help page. Often when you are working with package, `help()` won't be the most convenient or easy to read way to get help. Instead, we can search for online *documentation* for the package we are using.\n",
+    "Woah. That's a really long help page. Often when you are working with a new package, `help()` won't be the most convenient or easy to read way to get help. Instead, we can search for online *documentation* for the package we are using.\n",
     "\n",
     "If you Google **numpy documentation**, you will see links to info about *numpy* and another package, *scipy*. If you follow the links to **NumPy**, you should find a [NumPy user Guide](https://docs.scipy.org/doc/numpy-1.15.0/user/index.html) and from there, several pages of tutorials and documentation about the package. If we go to the [Quickstart tutorial](https://docs.scipy.org/doc/numpy-1.15.0/user/quickstart.html), we will see a much more legible intro to the package.\n",
     "\n",
